2006-06-27  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_list.h: fix bug in list.swap, thanks Viktor Govako.
	
	* test/unit/list_test.cpp: test for bug above.

2006-03-27  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/num_put_float.cpp: use buffers that at least longer
	than maximal double [or long double] exponent, so avoid
	potential vulnerabilities; this allow to read really long
	fix-float numbers [with lost of significant digits, of cause].

	* test/unit/floatio_test.cpp: add test for issue above

2006-03-23  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/cxa.c: remove wrong exclusion of lock for Solaris.

2006-03-15  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/cxa.c: remove usage of recursive mutex on FreeBSD prior to 5.3,
	due to problem with recursive mutex static initialization on such
	[i.e. FreeBSD 4.11 and above] platforms. I hope nobody will try to unload
	C++ shared objects [aka shared libs] in a few threads at same time---no
	workaround for FreeBSD 4.11. This problem has no relation
	to FreeBSD 5.3 and newer.

	* build/lib/Makefile.inc: bump working version to 5.0.3

2006-03-01  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* Repository: STLport 5.0.2, tag STLPORT_5_0_2

2006-02-28  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_string.h: capacity may return wrong value in case
	of no _STLP_USE_SHORT_STRING_OPTIM in use; thanks Rusty Koonce
	for report.

	* test/unit/string_test.cpp: test for capacity issue.

	* src/cxa.c: don't use cxa workaround for FreeBSD 6.0---it fine;
	this is rollback of changes 2006-01-24 [bad compiler was in use].

2006-02-10  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/num_put_float.cpp: remove usage of static buffers
	[potential vulnerabilities]; directly use __iostring instead.

	* test/unit/floatio_test.cpp: test for fixed float output;
	cases when fixed float fail on Linux and Solaris, related